Include everything in artifacts

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -18,8 +18,5 @@ cache:
   - packages -> **\packages.config
   - C:\Users\appveyor\.nuget\packages -> appveyor.yml
 
-# 'Release' is hard-coded to ensure VSIX and NuGet artifacts are only published for release configuration builds
 artifacts:
-- path: 'StyleCop.Analyzers\StyleCop.Analyzers.Vsix\bin\Release\net452\*.vsix'
-- path: 'StyleCop.Analyzers\StyleCop.Analyzers.CodeFixes\bin\Release\*.nupkg'
-- path: 'StyleCop.Analyzers.Status.json'
+- path: '**\*.*'
